# basic-rust-server

./: .env  Cargo.toml  README.md
src/: main.rs
